terraform/modules/EC2/security_groups.tf
#Create security group with firewall rules
resource "aws_security_group" "web" {
  name        = "web"
  vpc_id = var.vpc_id
  

                                    

                                  
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 # outbound from Jenkins server
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags= {
    Name = "ssh_8080"
  }
}
